--- a/spin/spin.css
+++ b/spin/spin.css
@@ -23,7 +23,7 @@ text-align:center;
     transform:rotate(0deg);
   }
     100%{
-    transform:rotate(360deg);
+    transform:rotate(360deg) scale(1.1);
   }
   
 }
