--- a/assets/index.css
+++ b/assets/index.css
@@ -23,6 +23,13 @@ header{
     align-items: center;
     justify-content: space-between;
     padding: 35px 100px 0;
+    animation: x 1.5s ease-out forwards;
+    opacity: 0;
+}
+@keyframes x{
+    100%{
+        opacity: 1;
+    }
 }
 header h2{
     font-family: "Quicksand",sans-serif;
