--- a/assets/index.css
+++ b/assets/index.css
@@ -14,9 +14,31 @@ nav{
 a{
     text-decoration: none;
     opacity: 0.75;
+    color: #fff;
+
+}
+a.btn{
+    border-radius: 4px;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center; 
+    background-color: #3f51b5;
+    opacity: 1;
+    box-shadow: 0px 6px #3f51b5;
+}
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px 80px;
 }
 a:hover{
     opacity:1;
+    color: rgb(2, 10,237);
+    box-shadow: 0px 4px #3f51b5;
+}
+a:active{
+    box-shadow: 0px 0px #3f51b5;
 }
 header{
     display: flex;
@@ -25,6 +47,9 @@ header{
     padding: 35px 100px 0;
     animation: x 1.5s ease-out forwards;
     opacity: 0;
+    position: absolute;
+    width: 100%;
+    color: #fff;
 }
 @keyframes x{
     100%{
@@ -40,7 +65,50 @@ header nav{
 
 
 }
-nav li{
+ header nav li{
     margin: 0px 13px;
     font-weight: 400;
+}
+.hero{
+    position: relative; 
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+    color: #fff;
+
+}
+.hero .background-image{
+    position: absolute;
+    left: 0;
+    top:0;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    z-index: -1;
+    background-color: #80a3db;
+}
+.hero h1{
+    font: bold 60px "Open Sans",sans-serif;
+    margin-bottom: 15px;
+
+}
+.hero h3{
+    font: normal 28px "Open Sans",sans-serif;
+    margin-bottom: 40px;
+    
+}
+.hero a.btn{
+    padding:20px 46px; 
+
+}
+.hero-content-area{
+opacity:0;
+margin-top: 100px;
+animation: Y 1s linear forwards;
+}
+@keyframes Y{
+    100%{
+        opacity:1;
+        margin-top:0px; 
+    }
 }
