--- a/assets/index.css
+++ b/assets/index.css
@@ -153,3 +153,18 @@ section p{
 .destinations .grid li.large{
     flex-basis:70%;
 }
+.packages .grid li{
+    padding:50px;
+    flex-basis: 50%;      
+    text-align: center; 
+}
+section:not(.hero):nth-child(even){
+    background-color: #f5f5f5;
+}
+.packages .grid li i{
+    color: #8c9eff; 
+}
+.packages .grid li h4{
+    font-size: 30px;
+    margin:25px 0;  
+}
